# fast-that-hash

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  gen_data.py  gen_rust.py  justfile
.github/workflows/: release.yml
docs/plans/: 2026-03-07-boundaryless-detection-design.md  2026-03-07-boundaryless-detection-plan.md
src/: boundaryless.rs  file_signatures.rs  filter.rs  formats.rs  hashes.rs  identifier.rs  input.rs  mac_vendors.rs  main.rs  mastercard.rs  output.rs  phone_codes.rs  regex_patterns.rs
tests/: boundaryless_integration.rs  parallel_integration.rs
