[package]
name = "fast-that-hash"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "fth"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.9"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
